<resources>
    <string name="app_name">My Hotel</string>
    <string name="btnLogin">Sign in</string>
    <string name="btnRegister">Sign up</string>
    <string name="btnForgot">Forgot Password?</string>
    <string name="etFirstNameHint">First Name</string>
    <string name="etLastNameHint">Last Name</string>
    <string name="etEmailHint">Email</string>
    <string name="etPasswordHint">Password</string>
    <string name="etPasswordConfirmHint">Confirm Password</string>
    <string name="btnCreate">Create</string>
    <string name="btnForgotConfirm">Reset</string>
    <string name="title">Title</string>
    <string name="forgotConfirmHint">Password Confirm</string>
    <string name="forgotConfirmBtn">Enter</string>
    <string name="forgotNewPassBtn">Update</string>
    <string name="passwordInstructions">The Password must have:\n-a length greater than 8 characters and lower than 15\n-at least One Number and one special character from (!@#$%^&amp;*-=+?.)\n-at least One lower case and one upper case letter\nand can\'t be a substring of the email </string>
    <string name="reservationButton">Make a reservation</string>
    <string name="datePickerButton">Pick Date</string>
    <string name="fragmentDoneBtn">Done</string>
    <string name="reservationPickButton">Pick</string>
    <string name="tvArrivalDate">Arrival</string>
    <string name="tvDepartureDate">Departure</string>
    <string name="etReservationPeople">People</string>
    <string name="btnReservationSearch">Search</string>
    <string name="btnRoomBook">Book This</string>
    <string name="tvAdultsLabel">Adults</string>
    <string name="tvChildrenLabel">Children</string>
    <string name="tvCheckInLabel">Check-in</string>
    <string name="tvCheckOutLabel">Check-out</string>
    <string name="cbTerms"><![CDATA[I agree with the terms & conditions by making this booking.]]></string>
    <string name="btnBookConfirm"><![CDATA[Confirm & Book]]></string>
    <string name="currency">EUR</string>
    <string name="reserveSuccess">Your reservation is complete!</string>
    <string name="reservationIDLabel">Reservation Number</string>
    <string name="btnHome">Home</string>
    <string name="etArrivalDateHint">Check in</string>
    <string name="etDepartureDateHint">Check out</string>
    <string name="saved_customerId" translatable="false">customerID_KEY</string>
    <string name="saved_email" translatable="false">email_KEY</string>
    <string name="saved_password" translatable="false">password_KEY</string>
    <string name="saved_firstName" translatable="false">firstName_KEY</string>
    <string name="saved_lastName" translatable="false">lastName_KEY</string>
    <string name="saved_title" translatable="false">title_KEY</string>
    <string name="beaconsEnabled" translatable="false">beacon_permission_KEY</string>
    <string name="is_checked_in" translatable="false">checkedIn_KEY</string>
    <string name="is_checked_out" translatable="false">checkedOut_KEY</string>
    <string name="is_notified_Welcome" translatable="false">notifiedWelcome_KEY</string>
    <string name="is_notified_Farewell" translatable="false">notifiedFarewell_KEY</string>
    <string name="is_old_customer" translatable="false">oldCustomer_KEY</string>
    <string name="spfile">sharedpreferenceKEY</string>
    <string name="roomServiceBtn">Room Service</string>
    <string name="viewReservationsBtn">View Reservations</string>
    <string name="tvFoodItemCurrency">€</string>
    <string name="tvFoodQuantityDefault">1</string>
    <string name="tvMultiplySymbol">x</string>
    <string name="tvCurrencySymbol">€</string>
    <string name="tvChooseFoodTotalLabel">Total:</string>
    <string name="btnBottomSheetOrder">Make an Order</string>
    <string name="tvBottomSheetMultiplyLabel">x</string>
    <string name="tvBottomSheetCurrency">€</string>
    <string name="tvBottomSheetTotalPriceCurrency">€</string>
    <string name="upcomingReservationsReservationID">Reservation Number</string>
    <string name="tvUpcomingReservationsAdults">Adults</string>
    <string name="tvUpcomingReservationsArrival">Arrival</string>
    <string name="tvUpcomingReservationsDeparture">Departure</string>
    <string name="tvUpcomingReservationsRoomTitle">Room Type</string>
    <string name="btn_view_reservations">My Reservations</string>
    <string name="tv_loyalty_account_number">Account Number</string>
    <string name="tv_loyalty_total_points">" points"</string>
    <string name="tvLoyalty_rewards_member_label">MEMBER</string>
    <string name="btnLoyaltyRewardsSystem">ABOUT THE REWARDS SYSTEM</string>
    <string name="title_activity_cccccccccccccccccc">cccccccccccccccccc</string>
    <string name="roomServiceConfirmationOrder">Your order is sent!</string>
    <string name="reviewRating">We hope you\'re enjoying your stay!</string>
    <string name="reviewRatingPrompt">Please spare a moment to rate our services</string>
    <string name="btnReviewSubmit">Submit</string>
    <string name="tvReviewComments">Comments (Optional)</string>
    <string name="ratingConfirmation">Thank you for sharing your experience with us!</string>
    <string name="reviewAlreadyMessage">Thank you for your feedback!</string>
    <string name="reviewCheckErrorMessage">Sorry something went wrong please try again later</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnUpcomingReservationsCheckin">Check In</string>
    <string name="tvUpcomingreservationsCheckedin">Checked in</string>
    <string name="tvcheckedinmsg">You have successfully checked-in!</string>
    <string name="tvcheckedinmsg2">Your room number is</string>
    <string name="tvViewHmyReservationsCheckInInstructionsTRUE">You can check in now!</string>
    <string name="tvViewHmyReservationsCheckInInstructionsFALSE">You can\'t Check in yet.</string>
    <string name="btnUpcomingReservationsCheckout">Check out</string>
    <string name="tvUpcomingReservationsInstructionsCheckIn">You can\'t check in yet</string>
    <string name="tvUpcomingReservationsInstructionsCheckOut">You can\'t check out yet</string>
    <string name="tvviewHmyReservationsCheckOutInstructionsTRUE">You can check out now</string>
    <string name="tvviewHmyReservationsCheckOutInstructionsFALSE">You can\'t check out yet</string>
    <string name="btnUpcomingReservationsCheckedOut">Checked out</string>
    <string name="tvViewHCheckoutCurrency">€</string>
    <string name="tvCheckoutTotalPriceLabel">Total price</string>
    <string name="btnCheckoutConfirm">Confirm and Checkout</string>
    <string name="tvCheckedOutMessage">You have successfully Checked out!</string>
    <string name="LoyaltyPointsLabel">Points</string>
    <string name="tvLoyaltyPointsNextTierPointsLabel">Unlock</string>
    <string name="tvLoyaltyPointsNextTierAtLabel">at</string>
    <string name="tvLoyaltyRewardsMemberDefault">REWARDS</string>
    <string name="tvRoomPriceCurrency">€</string>
    <string name="saved_farewell_time">farewellTime</string>
    <string name="tvRoomMultiply">x</string>
    <string name="tvRoomEquals">=</string>
    <string name="btnRoomDetails">Details</string>
    <string name="btnCheckInCheckIn">Check-in!</string>
    <string name="tvCheckInRoomLabel">Room Number</string>
    <string name="tvCheckInInform">You have successfully checked-in!</string>
    <string name="tvCheckInReservationNoLabel">Reservation Number</string>
    <string name="tvCheckInReservationArrivalLabel">Arrival Date</string>
    <string name="tvCheckInReservationDepartureLabel">Departure Date</string>
    <string name="btnHomeLoyalty">Loyalty</string>
    <string name="btnHomeReview">Review</string>
    <string name="btnHomeLogout">Logout</string>
    <string name="btnCheckInCheckedin">CHECKED-IN</string>
    <string name="tvBookCurrency">€</string>
    <string name="tvCreditCardYear">Exp. Year</string>
    <string name="tvCreditCardMonth">Exp. Month</string>
    <string name="tvCreditCardDivider">/</string>
    <string name="tvBookTotalPriceLabel">Total Amount:</string>
    <string name="tvRoomPriceLabel">Per Night</string>
    <string name="tvRoomPriceTotalLabel">Total</string>
    <string name="tvRoomDaysLabel">Days</string>
    <string name="tvRoomPersonsLabel">Total</string>
    <string name="tvRoomsPersonsLabel">People</string>
    <string name="tvRoomTotalLabel">Total:</string>
    <string name="tvBookDaysLabel">Days</string>
    <string name="tvBookRoomPriceCurrency">€</string>
    <string name="tvCreditCardDate">Expiration Date</string>
    <string name="btnHomeUnlock">Unlock your room</string>
    <string name="tietRegisterBirthDate">Birth Date</string>
    <string name="tvUpcomingReservationNoneFragment">You currently have no reservations. To make one, please see the \'make a reservation\' feature in the main menu.</string>
    <string name="tvUpcomingReservationNoneFragmentNEW">You have no upcoming reservations.</string>
    <string name="tvUsePointsTotalPoints">Total Points</string>
    <string name="tvUsePointsDays">Award nights:</string>
    <string name="tvUsePointsPointsDivider">/</string>
    <string name="tvUsePointsCurrency">€</string>
    <string name="tvUsePointsDaysDivider">/</string>
    <string name="tvCustomerServicesRoomNoLabel">Room</string>
    <string name="tvCustomerServicesReservationIDLabel">Reservation Number</string>
    <string name="tvCustomerServicesCheckedInLabel">Checked in</string>
    <string name="btnCustomerServicesCheckOut">Check out</string>
    <string name="btnCustomerServicesFloorLabel">Floor</string>
    <string name="btnCustomerServicesUnlockDoor">Unlock door</string>
    <string name="btnBookLoyalty">Redeem your Points</string>
    <string name="tvBookPointsLabel">" +"</string>
    <string name="tvBookRoomPriceLabel">Room Price</string>
    <string name="tvCustomerServicesNoReservation">You don\'t have an active reservation.</string>
    <string name="etReviewAlreadyComments">Thank you for your feedback!</string>
    <string name="etReviewComments" />
    <string name="tvForgotPrompt">Having trouble signing in?</string>
    <string name="tvForgotVerifyPrompt">Check your email</string>
    <string name="tvForgotVerifyPromptDetails">We have sent you a verification code, please verify your email address</string>
    <string name="tvForgotPromptDetails">Please enter your email address associated with the hotel and we \'ll send you recovery information</string>
    <string name="tvForgotNewPassPrompt">Choose a new password</string>
    <string name="tvForgotNewPassPromptDetails">We are almost done! Please enter a new password in the form below</string>
    <string name="title_activity_main11">MainActivity11</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_asdf">asdf</string>
    <string name="tvNavigationDrawerTier">Member</string>
    <string name="NavigationDrawerProfile">Profile</string>
    <string name="NavigationDrawerNewReservation">Make a new Reservation</string>
    <string name="NavigationDrawerContact">Contact us</string>
    <string name="navigationDrawerHome">Home</string>
    <string name="loyaltyStartingPoints">0</string>
    <string name="bottomNavigationBook">Booking</string>
    <string name="bottomNavigationLoyalty">Loyalty Club</string>
    <string name="bottomNavigationOffers">Offers</string>
    <string name="bottomNavigationOffersMyRoom">My Room</string>
    <string name="tvBottomSheetTitle">My cart</string>
    <string name="tvBottomSheetTotal">Total</string>
    <string name="tvBottomSheetTotalPrice">0</string>
    <string name="tvBottomSheetCount">0</string>
    <string name="etBottomSheetCommentsHint">Comments…</string>
    <string name="navigationdeletereservations">Demo: Remove Reservations</string>
</resources>