<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimarySuperLight"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/tvBottomSheetTitle"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/tvBottomSheetTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFoodFragmentRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/etBottomSheetComments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBottomSheetTitle">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/tvBottomSheetTotalLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/tvBottomSheetTotal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/btnBottomSheet"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBottomSheetTotalPriceCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBottomSheetTotalPriceCurrency"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvBottomSheetTotalLabel"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="€" />

    <Button
        android:id="@+id/btnBottomSheet"
        android:theme="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="makeOrder"
        android:text="@string/btnBottomSheetOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBottomSheetTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tvBottomSheetTotalPrice"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvBottomSheetTotalLabel"
        app:layout_constraintEnd_toStartOf="@+id/tvBottomSheetTotalPriceCurrency"
        tools:text="20" />

    <TextView
        android:id="@+id/tvBottomSheetCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/item_count"
        android:text="@string/tvBottomSheetCount"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBottomSheetComments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/etBottomSheetCommentsHint"
        android:inputType="textMultiLine"
        android:maxLength="140"
        android:maxLines="3"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/tvBottomSheetTotalLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>